syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "RecommendationProto";
option java_package = "com.aleslash.java.recommendation";

package hipstershop;

service RecommendationService {
    rpc ListRecommendations(ListRecommendationsRequest) returns (ListRecommendationsResponse){}
  }
  
  message ListRecommendationsRequest {
      string user_id = 1;
      repeated string product_ids = 2;
  }
  
  message ListRecommendationsResponse {
      repeated string product_ids = 1;
  }